# openstack-weblate-tools

./: .gitignore  README.md  requirements.txt  run.sh
openstack_weblate_tools/: cli.py  client.py  model.py  pyproject.toml  tool.py
